# DealerKiller

./: .gitignore  README.md  credentials.json  gmail_token.json  main.py  pyproject.toml  settings.toml
database/: base.py  conftest.py  conversation.py  database.py  message.py  test_database.py
event/: __init__.py  conftest.py  dispatcher.py  error.py  event.py  handler.py  test_dispatcher.py
im/discord/: client.py  event.py  message_type.py
im/discord/events/: generated_response.py  new_mail.py
im/discord/ui/: mail_response_view.py  new_mail_view.py  prompt_modal.py
llm/: event.py  ollama.py  openai.py  prompt.py
mail/: client.py  gmail_client.py  schedule.py
mail/auth/: oauth2.py
mail/events/: send_email.py
mail/gmail/: attachment.py  gmail.py  message.py  query.py  user_profile.py
models/: conversation.py  message.py
