[tool.poetry]
name = "DealerKiller"
version = "0.1.0"
description = "A LLM-based chat bot that negotiates car price with dealers"
authors = ["Yifan Zhang <zyfinori@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
google-api-python-client = "^2.137.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
google-auth = "^2.32.0"
discord-py = "^2.4.0"
dynaconf = "^3.2.6"
python-dateutil = "^2.9.0.post0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"